--- a/app/src/main/res/layout/journey_album_layout.xml
+++ b/app/src/main/res/layout/journey_album_layout.xml
@@ -2,13 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
+    android:id="@+id/journey_album_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="20dp"
-    tools:context=".MainActivity"
+    android:layout_margin="20dp"
+    android:gravity="center"
+    android:background="#B9F6C9"
     android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/albumJourneyNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Location"
+            android:id="@+id/albumJourneyLocationTextView"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_marginBottom="10dp"/>
+
+        <TextView
+            android:id="@+id/albumDateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="October 21, 2023"
+            android:textSize="15sp"
+            />
 
 </LinearLayout>
