--- a/app/src/main/res/layout/activity_journey_album_recycler.xml
+++ b/app/src/main/res/layout/activity_journey_album_recycler.xml
@@ -5,14 +5,26 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:padding="25dp"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="All Journeys"
+        android:id="@+id/allJourneysTextView"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:paddingBottom="20dp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvItems"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         app:layoutManager="LinearLayoutManager"/>
 
 </LinearLayout>
