--- a/app/src/main/res/layout/user_settings.xml
+++ b/app/src/main/res/layout/user_settings.xml
@@ -172,6 +172,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#1D422F"
+            android:background="#84e89f"
             android:onClick="saveData"
             android:text="Save Data" />
 
@@ -183,6 +184,7 @@
         android:layout_height="100dp"
         android:layout_weight="1"
         android:textColor="#1D422F"
+
         android:orientation="vertical">
 
         <Button
@@ -190,6 +192,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#1D422F"
+            android:background="#84e89f"
             android:onClick="goBack"
             android:text="Cancel" />
 
