--- a/app/src/main/res/layout/activity_new_journey.xml
+++ b/app/src/main/res/layout/activity_new_journey.xml
@@ -27,12 +27,13 @@
             android:textSize="20sp"
             android:gravity="right" />
 
-        <TextView
+        <EditText
             android:id="@+id/userJourneyNameTextView"
             android:text="   Stanley Park Jog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textColor="#8b8b8c"
             android:paddingRight="10dp"/>
 
     </LinearLayout>
@@ -54,12 +55,13 @@
             android:textSize="20sp"
             android:gravity="right" />
 
-        <TextView
+        <EditText
             android:id="@+id/userJourneyLocationTextView"
             android:text="   Stanley Park"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textColor="#8b8b8c"
             android:paddingRight="10dp"/>
 
     </LinearLayout>
@@ -74,7 +76,7 @@
         android:layout_marginBottom="15dp"
         />
 
-    <TextView
+    <EditText
         android:id="@+id/checklistBoxTextView"
         android:layout_width="match_parent"
         android:layout_height="232dp"
@@ -82,9 +84,11 @@
         android:background="@drawable/textbox_style"
         android:hint="Enter a list of items to bring on your journey..."
         android:padding="10dp"
+        android:gravity="top"
         android:textSize="18sp" />
     <Button
-        android:id="@+id/button"
+        android:id="@+id/startJourney"
+        android:onClick="viewJourneyDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start Journey!"
