Added more buttons for user to click on
Added in main activity, new journal activity, new journal activity, and usersettings activity.

--- a/app/src/main/res/layout/activity_new_journey.xml
+++ b/app/src/main/res/layout/activity_new_journey.xml
@@ -5,11 +5,28 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="40dp"
+    android:layout_marginTop="20dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/homeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="< Home"
+            android:onClick="goHome"
+            android:textColor="#1D422F"
+            android:background="#84e89f"
+            android:textSize="20sp" />
+    </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
