--- a/app/src/main/res/layout/activity_new_journey_detail.xml
+++ b/app/src/main/res/layout/activity_new_journey_detail.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:text="< Home"
+            android:onClick="goHome"
             android:textColor="#1D422F"
             android:background="#84e89f"
             android:textSize="20sp" />
