--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,17 +19,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:layout_marginLeft="250dp"
             android:layout_marginBottom="10dp"
-            android:onClick="gotoUserSettings"
-            android:layout_marginLeft="255dp"
-            android:textColor="#1D422F"
             android:background="#84e89f"
-            android:text="Settings >" />
+            android:onClick="gotoUserSettings"
+            android:text="Settings"
+            android:textColor="#1D422F" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello User!"
+            android:id="@+id/welcomeUser"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
