--- a/app/src/main/res/layout/activity_journey_album_recycler.xml
+++ b/app/src/main/res/layout/activity_journey_album_recycler.xml
@@ -10,6 +10,24 @@
     android:gravity="center"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_weight="0.1"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/homeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:background="#84e89f"
+            android:onClick="goHome"
+            android:text="Home"
+            android:textColor="#1D422F"
+            android:textSize="20sp" />
+    </LinearLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
