--- a/app/src/main/res/layout/user_settings.xml
+++ b/app/src/main/res/layout/user_settings.xml
@@ -35,9 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="5sp"
-                android:text="First Name:"
+                android:text="Name:"
                 android:textStyle="bold"
-
                 android:textSize="20sp" />
 
             <EditText
@@ -46,64 +45,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="First Name"
+                android:hint="Name"
                 android:inputType="textPersonName"
                 android:textSize="20sp" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/lastNameTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingRight="5sp"
-                android:text="Last Name: "
-                android:textStyle="bold"
-
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/lastNameEditText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Last Name"
-                android:inputType="textPersonName"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/emailTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingRight="5sp"
-                android:text="Email: "
-                android:textStyle="bold"
-
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/emailEditText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Email"
-                android:inputType="textPersonName"
-                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -157,6 +102,46 @@
                 android:hint="Font Size"
                 android:inputType="textPersonName"
                 android:textSize="20sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dark Mode: "
+                android:id="@+id/textViewBGColour"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:textStyle="bold"
+                android:textSize="20sp" />
+            <RadioGroup
+                android:id="@+id/radioGroupColors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true">
+                <RadioButton
+                    android:id="@+id/radioOn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="On"
+                    android:textSize="20sp" />
+                <RadioButton
+                    android:id="@+id/radioOff"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Off"
+                    android:checked="true"
+                    android:textSize="20sp" />
+
+            </RadioGroup>
+
+
         </LinearLayout>
 
     </LinearLayout>
