added light sensor to new journal detail
also adjusted its layout

--- a/app/src/main/res/layout/user_settings.xml
+++ b/app/src/main/res/layout/user_settings.xml
@@ -129,13 +129,13 @@
                     android:id="@+id/radioOn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="On"
+                    android:text="Turn On Sensor"
                     android:textSize="20sp" />
                 <RadioButton
                     android:id="@+id/radioOff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Off"
+                    android:text="Turn Off Sensor"
                     android:checked="true"
                     android:textSize="20sp" />
 
