--- a/app/src/main/res/layout/activity_new_journey_detail.xml
+++ b/app/src/main/res/layout/activity_new_journey_detail.xml
@@ -136,48 +136,52 @@
 
         </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:orientation="vertical"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/notesLayout">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Notes:"
-            android:id="@+id/journeyNotesTextView"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:layout_marginBottom="10dp"
-            android:gravity="right"/>
-
-        <EditText
-            android:id="@+id/notesBoxTextView"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="0dp"
+            android:layout_weight="3"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/textbox_style"
-            android:gravity="top"
-            android:hint="Note anything important during your journey..."
-            android:padding="10dp"
-            android:textSize="18sp" />
+            android:id="@+id/notesLayout">
 
-        <Button
-            android:id="@+id/addPhotosButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginBottom="10dp"
-            android:background="#84e89f"
-            android:onClick="addPhotos"
-            android:text="Add Photos"
-            android:textColor="#1D422F" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Notes:"
+                android:id="@+id/journeyNotesTextView"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_marginBottom="10dp"
+                android:gravity="right"/>
 
+            <Button
+                android:id="@+id/addPhotosButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginBottom="10dp"
+                android:background="#84e89f"
+                android:onClick="addPhotos"
+                android:text="Add Photos"
+                android:textColor="#1D422F" />
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/notesBoxTextView"
+                android:layout_width="match_parent"
+                android:layout_height="81dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/textbox_style"
+                android:gravity="top"
+                android:hint="Note anything important during your journey..."
+                android:padding="10dp"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
