--- a/app/src/main/res/layout/activity_journey_album_recycler.xml
+++ b/app/src/main/res/layout/activity_journey_album_recycler.xml
@@ -38,6 +38,15 @@
         android:paddingBottom="20dp"
         />
 
+    <TextView
+        android:id="@+id/emptyListTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
+        android:text="Your album is currently empty"
+        android:textSize="16sp"
+        tools:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvItems"
         android:layout_width="match_parent"
