--- a/app/src/main/res/layout/activity_new_journey_detail.xml
+++ b/app/src/main/res/layout/activity_new_journey_detail.xml
@@ -158,21 +158,10 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="right"/>
 
-            <Button
-                android:id="@+id/addPhotosButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginBottom="10dp"
-                android:background="#84e89f"
-                android:onClick="addPhotos"
-                android:text="Add Photos"
-                android:textColor="#1D422F" />
-
             <EditText
                 android:id="@+id/notesBoxTextView"
                 android:layout_width="match_parent"
-                android:layout_height="106dp"
+                android:layout_height="140dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/textbox_style"
                 android:gravity="top"
@@ -185,20 +174,38 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="12dp"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/checklistButton"
-            android:layout_width="match_parent"
+            android:layout_width="193dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="#84e89f"
+            android:text="View Checklist"
+            android:textColor="#1D422F" />
+
+        <Button
+            android:id="@+id/addPhotosButton"
+            android:layout_width="141dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="#84e89f"
-            android:padding="10dp"
-            android:text="View Checklist"
-            android:textColor="#1D422F"
-            android:textSize="20sp" />
+            android:onClick="addPhotos"
+            android:text="Take Photos"
+            android:textColor="#1D422F" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="28dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/saveButton"
@@ -211,7 +218,7 @@
             android:textColor="#1D422F"
             android:textSize="20sp" />
 
-
     </LinearLayout>
+
 
 </LinearLayout>
