--- a/app/src/main/res/layout/activity_new_journey_detail.xml
+++ b/app/src/main/res/layout/activity_new_journey_detail.xml
@@ -181,8 +181,9 @@
 
         <Button
             android:id="@+id/checklistButton"
-            android:layout_width="193dp"
+            android:layout_width="170dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:background="#84e89f"
@@ -191,8 +192,9 @@
 
         <Button
             android:id="@+id/addPhotosButton"
-            android:layout_width="141dp"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10dp"
             android:background="#84e89f"
             android:onClick="addPhotos"
