--- a/app/src/main/res/layout/activity_new_journey_detail.xml
+++ b/app/src/main/res/layout/activity_new_journey_detail.xml
@@ -181,24 +181,36 @@
 
         <Button
             android:id="@+id/checklistButton"
-            android:layout_width="170dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:background="#84e89f"
             android:text="View Checklist"
+            android:layout_marginRight="5dp"
+            android:textSize="10sp"
             android:textColor="#1D422F" />
 
         <Button
-            android:id="@+id/addPhotosButton"
-            android:layout_width="140dp"
+            android:id="@+id/takePhotosButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="5dp"
+            android:background="#84e89f"
+            android:onClick="takePhotos"
+            android:text="Take Photos"
+            android:textSize="10sp"
+            android:textColor="#1D422F" />
+
+        <Button
+            android:id="@+id/viewPhotosButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="#84e89f"
-            android:onClick="addPhotos"
-            android:text="Take Photos"
+            android:onClick="viewPhotos"
+            android:text="View Photos"
+            android:textSize="10sp"
             android:textColor="#1D422F" />
 
     </LinearLayout>
