--- a/app/src/main/res/layout/activity_edit_journal_detail.xml
+++ b/app/src/main/res/layout/activity_edit_journal_detail.xml
@@ -193,6 +193,7 @@
 
         <Button
             android:id="@+id/checklistButton"
+            android:onClick="viewChecklist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
