Changed some buttons to icons, is currently working, only minor thing is that the UI looks kinda ugly now lol

--- a/app/src/main/res/layout/activity_edit_journal_detail.xml
+++ b/app/src/main/res/layout/activity_edit_journal_detail.xml
@@ -11,30 +11,46 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
+        android:gravity="right"
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/homeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:text="Home"
-            android:onClick="goHome"
-            android:textColor="#1D422F"
-            android:background="#B9F6C9"
-            android:layout_marginRight="10dp"
-            android:textSize="20sp" />
 
         <Button
             android:id="@+id/AlbumButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:background="#84e89f"
             android:onClick="goAlbum"
             android:text="Journey Album"
+            android:textSize="12sp"
             android:textColor="#1D422F"
-            android:textSize="20sp" />
+            android:layout_marginRight="20dp"
+            />
+
+        <ImageButton
+            android:id="@+id/homeButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="10dp"
+            android:text="Home"
+            android:onClick="goHome"
+            android:src="@drawable/home"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            />
+<!--        <ImageButton-->
+<!--            android:id="@+id/deleteButton"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_marginBottom="20dp"-->
+<!--            android:onClick="deleteEntry"-->
+<!--            android:text="Delete Journey"-->
+<!--            android:textSize="12sp"-->
+<!--            android:textColor="#1D422F"-->
+<!--            android:src="@drawable/trashcan"-->
+<!--            android:background="@null"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            />-->
 
 
     </LinearLayout>
@@ -173,7 +189,7 @@
             <EditText
                 android:id="@+id/notesBoxTextView"
                 android:layout_width="match_parent"
-                android:layout_height="106dp"
+                android:layout_height="136dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/textbox_style"
                 android:gravity="top"
@@ -199,7 +215,7 @@
             android:layout_marginBottom="10dp"
             android:background="#84e89f"
             android:text="View Checklist"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="10dp"
             android:textSize="10sp"
             android:textColor="#1D422F" />
 
@@ -208,7 +224,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="10dp"
             android:background="#84e89f"
             android:onClick="takePhotos"
             android:text="Take Photos"
@@ -232,18 +248,38 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/saveButton"
             android:onClick="saveData"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#84e89f"
-            android:padding="10dp"
-            android:text="Save"
+            android:paddingRight="50dp"
+            android:paddingLeft="50dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:text="Save Data"
+            android:gravity="center_horizontal"
             android:textColor="#1D422F"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="10dp"
             android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/deleteButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:onClick="deleteEntry"
+            android:text="Delete Journey"
+            android:src="@drawable/trashcan"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            />
+
 
 
     </LinearLayout>
