--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,26 +14,31 @@
         android:layout_weight="3"
         android:orientation="vertical">
 
-        <Button
+        <ImageButton
             android:id="@+id/userSettings"
-            android:layout_width="121dp"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_gravity="right"
             android:layout_marginBottom="10dp"
-            android:background="#84e89f"
             android:onClick="gotoUserSettings"
-            android:text="Settings" />
+            android:text="Settings"
+            android:src="@drawable/settingsgear"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello User!"
             android:textSize="20dp"
+            android:layout_gravity="center"
             android:id="@+id/welcomeUser"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="50dp"/>
     </LinearLayout>
 
 
