--- a/app/src/main/res/layout/user_settings.xml
+++ b/app/src/main/res/layout/user_settings.xml
@@ -22,7 +22,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:text="Settings"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
